# Generated by Django 3.0.6 on 2020-05-28 01:15

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tasks', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Task',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200, verbose_name='Tarefa')),
                ('description', models.TextField(verbose_name='Descrição')),
                ('end_date', models.DateField(verbose_name='Data Final')),
                ('priority', models.CharField(choices=[('B', 'Baixa'), ('M', 'Média'), ('A', 'Alta')], max_length=1, verbose_name='Prioridade')),
                ('status', models.CharField(choices=[('EX', 'Em execução'), ('PD', 'Pendente'), ('A', 'Alta')], max_length=2, verbose_name='Status')),
                ('category', models.ManyToManyField(to='tasks.Category')),
            ],
            options={
                'verbose_name': 'Tarefa',
                'verbose_name_plural': 'Tarefas',
                'ordering': ['id'],
            },
        ),
    ]
